# geolocate

./: .gitmodules  CMakeLists.txt  README.md  demo.cpp  exif-gps-exiv2.cpp  exif-gps.h  geolocate.cpp  geolocate.h  parse-eyefi-log.cpp  parse-eyefi-log.h
src/: CMakeLists.txt  access-point.h  exif-gps.h
